@@ -46,5 +46,49 @@
             Assert.AreEqual(1, environment.GetValue("one"));
             Assert.AreEqual("bar", environment.GetValue("bar"));
         }
+
+        [TestMethod]
+        public void ExecuteIfCommandWhenTrue()
+        {
+            IExpression condition = new ConstantExpression(true);
+            ICommand setCommand = new SetVariableCommand("x", new ConstantExpression(1));
+            IfCommand command = new IfCommand(condition, setCommand);
+
+            BindingEnvironment environment = new BindingEnvironment();
+
+            command.Execute(environment);
+
+            Assert.AreEqual(1, environment.GetValue("x"));
+        }
+
+        [TestMethod]
+        public void ExecuteIfCommandWhenFalse()
+        {
+            IExpression condition = new ConstantExpression(false);
+            ICommand setCommand = new SetVariableCommand("x", new ConstantExpression(1));
+            IfCommand command = new IfCommand(condition, setCommand);
+
+            BindingEnvironment environment = new BindingEnvironment();
+
+            command.Execute(environment);
+
+            Assert.IsNull(environment.GetValue("x"));
+        }
+
+        [TestMethod]
+        public void ExecuteIfCommandElseWhenFalse()
+        {
+            IExpression condition = new ConstantExpression(false);
+            ICommand setXCommand = new SetVariableCommand("x", new ConstantExpression(1));
+            ICommand setYCommand = new SetVariableCommand("y", new ConstantExpression(2));
+            IfCommand command = new IfCommand(condition, setXCommand, setYCommand);
+
+            BindingEnvironment environment = new BindingEnvironment();
+
+            command.Execute(environment);
+
+            Assert.IsNull(environment.GetValue("x"));
+            Assert.AreEqual(2, environment.GetValue("y"));
+        }
     }
 }
